2008-05-28  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstiterator.c:
	Remove an unused field from the private GstListIterator struct.

2008-05-27  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/controller/gstcontroller.c:
	  Add parameter guards.

2008-05-27  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/gst/gstpipeline.c:
	  Revert test change and add comment why it should not work.

2008-05-27  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/gst/gstpipeline.c:
	  Extending the test a little to verify that we also get the NULL state-
	  change message.

2008-05-27  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstpreset.c: (gst_preset_default_get_meta),
	  (gst_preset_get_preset_names), (gst_preset_get_property_names),
	  (gst_preset_load_preset), (gst_preset_save_preset),
	  (gst_preset_rename_preset), (gst_preset_delete_preset),
	  (gst_preset_set_meta):
	  Add Since: markers to docs blurbs.

	* win32/common/libgstreamer.def:
	  Add recently-added API.

2008-05-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	Add DATADIR for storing presets.

	* docs/gst/gstreamer-docs.sgml:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/gstreamer.types.in:
	Add GstPreset to docs.

	* gst/Makefile.am:
	* gst/gst.h:
	* gst/gstpreset.c: (preset_get_paths), (preset_skip_property),
	(preset_open_and_parse_header), (preset_parse_version),
	(preset_merge), (preset_get_keyfile),
	(gst_preset_default_get_preset_names),
	(gst_preset_default_get_property_names),
	(gst_preset_default_load_preset),
	(gst_preset_default_save_presets_file),
	(gst_preset_default_save_preset),
	(gst_preset_default_rename_preset),
	(gst_preset_default_delete_preset), (gst_preset_default_set_meta),
	(gst_preset_default_get_meta), (gst_preset_default_randomize),
	(gst_preset_default_reset), (gst_preset_get_preset_names),
	(gst_preset_get_property_names), (gst_preset_load_preset),